--- a/benchmarkV0.4.ipynb
+++ b/benchmarkV0.4.ipynb
@@ -6,13 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install pandas --quiet\n",
+    "!pip install numpy --quiet\n",
+    "!pip install matplotlib --quiet\n",
+    "!pip install adjustText --quiet\n",
     "%matplotlib inline\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import ticker\n",
-    "!pip install adjustText --quiet\n",
     "from adjustText import adjust_text"
    ]
   },
@@ -404,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d61cceac50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1f3d2f74f60>"
       ]
      },
      "execution_count": 11,
@@ -474,6 +477,418 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>platforms</th>\n",
+       "      <th>unlimited_users</th>\n",
+       "      <th>unlimited_hosting</th>\n",
+       "      <th>e_commerce</th>\n",
+       "      <th>own_content</th>\n",
+       "      <th>lead_generation</th>\n",
+       "      <th>custom_domain</th>\n",
+       "      <th>webconference</th>\n",
+       "      <th>gamification</th>\n",
+       "      <th>guided_onboarding</th>\n",
+       "      <th>...</th>\n",
+       "      <th>white_labeling</th>\n",
+       "      <th>learning_paths</th>\n",
+       "      <th>authoring</th>\n",
+       "      <th>webhooks</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>percent_grade</th>\n",
+       "      <th>country</th>\n",
+       "      <th>price</th>\n",
+       "      <th>users</th>\n",
+       "      <th>price/user</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Konviva</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83.40</td>\n",
+       "      <td>45.08</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>364</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maestrus</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89.80</td>\n",
+       "      <td>48.54</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>139.6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Herospark</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>128.45</td>\n",
+       "      <td>69.43</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>364</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Twygo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>81.35</td>\n",
+       "      <td>43.97</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>699</td>\n",
+       "      <td>300</td>\n",
+       "      <td>2.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Micropower</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76.28</td>\n",
+       "      <td>41.23</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>364</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Matrix LMS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>136.95</td>\n",
+       "      <td>74.03</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>500</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Talent LMS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>129.06</td>\n",
+       "      <td>69.76</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>653.1084</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Blackboard</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>87.23</td>\n",
+       "      <td>47.15</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>123,228.00</td>\n",
+       "      <td>300</td>\n",
+       "      <td>410.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Canvas LMS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>104.06</td>\n",
+       "      <td>56.25</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2310.525</td>\n",
+       "      <td>300</td>\n",
+       "      <td>7.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Cornerstone</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64.89</td>\n",
+       "      <td>35.08</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>7393.68</td>\n",
+       "      <td>300</td>\n",
+       "      <td>24.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Crossknowledge</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75.44</td>\n",
+       "      <td>40.78</td>\n",
+       "      <td>GLOBAL</td>\n",
+       "      <td>364</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>SAP Sucessfactors</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61.83</td>\n",
+       "      <td>33.42</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>3696.84</td>\n",
+       "      <td>300</td>\n",
+       "      <td>12.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            platforms  unlimited_users  unlimited_hosting  e_commerce  \\\n",
+       "0             Konviva                0               0.00        4.06   \n",
+       "1            Maestrus                0               0.00        4.06   \n",
+       "2           Herospark                0               4.78        4.06   \n",
+       "3               Twygo                0               0.00        4.06   \n",
+       "4          Micropower                0               0.00        0.00   \n",
+       "5          Matrix LMS                0               4.78        4.06   \n",
+       "6          Talent LMS                0               4.78        4.06   \n",
+       "7          Blackboard                0               0.00        4.06   \n",
+       "8          Canvas LMS                0               0.00        0.00   \n",
+       "9         Cornerstone                0               0.00        4.06   \n",
+       "10     Crossknowledge                0               0.00        0.00   \n",
+       "11  SAP Sucessfactors                0               0.00        0.00   \n",
+       "\n",
+       "    own_content  lead_generation  custom_domain  webconference  gamification  \\\n",
+       "0          3.89             0.00           4.67           0.00          4.78   \n",
+       "1          0.00             3.94           4.67           0.00          0.00   \n",
+       "2          3.89             0.00           4.67           4.44          4.78   \n",
+       "3          3.89             0.00           4.67           0.00          4.78   \n",
+       "4          0.00             0.00           0.00           4.44          4.78   \n",
+       "5          3.89             0.00           4.67           4.44          4.78   \n",
+       "6          0.00             0.00           4.67           4.44          4.78   \n",
+       "7          3.89             0.00           4.67           4.44          0.00   \n",
+       "8          3.89             0.00           4.67           4.44          4.78   \n",
+       "9          0.00             0.00           4.67           4.44          4.78   \n",
+       "10         0.00             0.00           0.00           4.44          4.78   \n",
+       "11         0.00             0.00           0.00           0.00          0.00   \n",
+       "\n",
+       "    guided_onboarding  ...  white_labeling  learning_paths  authoring  \\\n",
+       "0                0.00  ...               0             0.0        0.0   \n",
+       "1                4.17  ...               2             0.0        0.0   \n",
+       "2                4.17  ...               0             4.5        2.5   \n",
+       "3                4.17  ...               0             4.5        0.0   \n",
+       "4                0.00  ...               0             4.5        0.0   \n",
+       "5                4.17  ...               2             4.5        0.0   \n",
+       "6                4.17  ...               2             4.5        0.0   \n",
+       "7                4.17  ...               0             0.0        0.0   \n",
+       "8                0.00  ...               0             4.5        0.0   \n",
+       "9                0.00  ...               0             0.0        2.5   \n",
+       "10               0.00  ...               0             0.0        0.0   \n",
+       "11               4.17  ...               0             0.0        0.0   \n",
+       "\n",
+       "    webhooks   grade  percent_grade  country       price  users  price/user  \n",
+       "0          0   83.40          45.08      BRA         364    300        1.21  \n",
+       "1          0   89.80          48.54      BRA       139.6     40        3.49  \n",
+       "2          4  128.45          69.43      BRA         364    300        1.21  \n",
+       "3          0   81.35          43.97      BRA         699    300        2.33  \n",
+       "4          0   76.28          41.23      BRA         364    300        1.21  \n",
+       "5          4  136.95          74.03      USA        1000    500        2.00  \n",
+       "6          4  129.06          69.76      USA    653.1084    100        6.53  \n",
+       "7          0   87.23          47.15      USA  123,228.00    300      410.76  \n",
+       "8          4  104.06          56.25      USA    2310.525    300        7.70  \n",
+       "9          0   64.89          35.08      USA     7393.68    300       24.65  \n",
+       "10         0   75.44          40.78   GLOBAL         364    300        1.21  \n",
+       "11         0   61.83          33.42      USA     3696.84    300       12.32  \n",
+       "\n",
+       "[12 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pesos_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -483,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +1178,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d61d0bf588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1f3d335ac50>"
       ]
      },
      "execution_count": 19,
